--- a/realsense2_description/CMakeLists.txt
+++ b/realsense2_description/CMakeLists.txt
@@ -1,18 +1,13 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
 project(realsense2_description)
 
-find_package(catkin REQUIRED COMPONENTS
+find_package(ament_cmake REQUIRED
     )
 
 # RealSense description
-catkin_package(
+ament_package(
     )
 
 # Install files
-install(DIRECTORY launch meshes rviz urdf
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
-
-# Tests
-if (CATKIN_ENABLE_TESTING)
-  catkin_add_nosetests(tests)
-endif()
+install(DIRECTORY meshes urdf
+  DESTINATION share/${PROJECT_NAME})
